# PrincetonRaceCar_Interface

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: sim.cfg  sim_params.yaml
launch/: obstacle.yaml  simulation.launch  traffic_simulation.launch  traffic_simulation_launch.py  visualization.launch  visualization_launch.py
rviz/: config.rviz  rqt.perspective  rqt_sim.perspective  rqt_truck.perspective  simulation.rviz  truck.rviz
script/: simulation_node.py  traffic_simulation_node.py  visualization_node.py
script/simulator/: __init__.py  dynamics.py  ref_path.py  ros_utility.py  simulator.py  traffic_simulator.py
srv/: Reset.srv  ResetObstacle.srv
